--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="populate_db">Load DB</string>
     <string name="load_db">Load DB</string>
     <string name="no_bodies">No objects (Pull to refresh)</string>
+    <string name="get_geo_position">Get Geo Position</string>
 
     <string-array name="celestial_bodies">
         <item>Sun</item>
